[refactor]: update logicks
