# docs/swagger.yaml
@@ -119,6 +119,8 @@ definitions:
     type: object
   models.SwagUser:
     properties:
+      birth_date:
+        type: string
       email:
         type: string
       full_name:
@@ -164,6 +166,17 @@ definitions:
       vacancy_id:
         example: 1
         type: integer
+    type: object
+  models.UpdateUser:
+    properties:
+      birth_date:
+        type: string
+      email:
+        type: string
+      full_name:
+        type: string
+      username:
+        type: string
     type: object
   models.User:
     properties:
@@ -361,32 +374,6 @@ paths:
       tags:
       - Reports
   /applications:
-    get:
-      consumes:
-      - application/json
-      description: Get a list of all applications. Requires authentication.
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/models.SwaggerApplication'
-            type: array
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/controllers.ErrorResponse'
-        "403":
-          description: Access Denied
-          schema:
-            $ref: '#/definitions/controllers.ErrorResponse'
-      security:
-      - ApiKeyAuth: []
-      summary: Get all applications
-      tags:
-      - Applications
     post:
       consumes:
       - application/json
@@ -527,46 +514,6 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Get application by ID
-      tags:
-      - Applications
-    put:
-      consumes:
-      - application/json
-      description: Update an application by its ID. Requires authentication.
-      parameters:
-      - description: Application ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      - description: Updated application data
-        in: body
-        name: application
-        required: true
-        schema:
-          $ref: '#/definitions/models.SwaggerApplication'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/controllers.DefaultResponse'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/controllers.ErrorResponse'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/controllers.ErrorResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/controllers.ErrorResponse'
-      security:
-      - ApiKeyAuth: []
-      summary: Update an existing application
       tags:
       - Applications
   /auth/sign-in:
@@ -1278,6 +1225,45 @@ paths:
       summary: Get all users
       tags:
       - Users
+    put:
+      consumes:
+      - application/json
+      description: Update an existing user with the provided details
+      parameters:
+      - description: Updated user data
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/models.UpdateUser'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: '#/definitions/controllers.DefaultResponse'
+        "400":
+          description: Invalid ID or input
+          schema:
+            $ref: '#/definitions/controllers.ErrorResponse'
+        "403":
+          description: Access Denied
+          schema:
+            $ref: '#/definitions/controllers.ErrorResponse'
+        "404":
+          description: User not found
+          schema:
+            $ref: '#/definitions/controllers.ErrorResponse'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/controllers.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Update user details
+      tags:
+      - Users
   /users/{id}:
     delete:
       consumes:
@@ -1349,50 +1335,6 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Get user by ID
-      tags:
-      - Users
-    put:
-      consumes:
-      - application/json
-      description: Update an existing user with the provided details
-      parameters:
-      - description: User ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      - description: Updated user data
-        in: body
-        name: user
-        required: true
-        schema:
-          $ref: '#/definitions/models.SwagUser'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Success
-          schema:
-            $ref: '#/definitions/controllers.DefaultResponse'
-        "400":
-          description: Invalid ID or input
-          schema:
-            $ref: '#/definitions/controllers.ErrorResponse'
-        "403":
-          description: Access Denied
-          schema:
-            $ref: '#/definitions/controllers.ErrorResponse'
-        "404":
-          description: User not found
-          schema:
-            $ref: '#/definitions/controllers.ErrorResponse'
-        "500":
-          description: Internal server error
-          schema:
-            $ref: '#/definitions/controllers.ErrorResponse'
-      security:
-      - ApiKeyAuth: []
-      summary: Update user details
       tags:
       - Users
   /users/block/{id}:
@@ -1571,11 +1513,6 @@ paths:
       description: Add a new vacancy with the provided details.
       operationId: add-vacancy
       parameters:
-      - description: User ID to check if the user is blocked
-        in: query
-        name: userID
-        required: true
-        type: integer
       - description: Vacancy object to be added
         in: body
         name: vacancy
